--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  video_player: ^2.8.3
   audio_service: ^0.18.12
   just_audio: ^0.9.36
+  simple_pip_mode: ^0.8.0
+  video_player: ^2.8.3
+  flick_video_player: ^0.7.0
+  flutter_svg: ^0.22.0
+  # better_player: ^0.0.83
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
